# exp-monorepo-python-uv

./: README.md
py-api/: main.py  pyproject.toml
py-basecamp/: main.py  pyproject.toml
py-zcommonlib/: pyproject.toml
py-zcommonlib/src/py_zcommonlib/: __init__.py  datetime_lib.py
