[project]
name = "py-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.115.11",
    "uvicorn>=0.34.0",
    # local
    "py-zcommonlib",
]

# ref: https://github.com/astral-sh/uv/issues/6371
[tool.uv.sources]
py_zcommonlib = { path="../py-zcommonlib", editable=true }
